vendor/hdf5-metno-derive-0.10.0/tests/compile-fail/empty-tuple-struct.stderr
error: cannot derive `H5Type` for empty tuple structs
 --> tests/compile-fail/empty-tuple-struct.rs:6:8
  |
6 | struct Foo();
  |        ^^^
